# datamodule

./: '  .CMakeLists.txt.swp  CMakeLists.txt  LICENSE  README.md  build_xdatacollecter.sh  cleartmp.py  env_linux.sh  env_linux_arm.sh  main.cpp  main.cpp.pre
common/typeany/inc/: '  typeany.h  typeany.h.pre
common/typeany/src/: typeany.cpp  typeany.cpp.pre
doc/: log.conf  logs.conf
download/curl-7.74.0/: Makefile  config.status  curl-config  libcurl.pc  libtool
download/curl-7.74.0/docs/: Makefile
download/curl-7.74.0/docs/cmdline-opts/: Makefile
download/curl-7.74.0/docs/examples/: Makefile
download/curl-7.74.0/docs/libcurl/: Makefile
download/curl-7.74.0/docs/libcurl/opts/: Makefile
download/curl-7.74.0/include/: Makefile
download/curl-7.74.0/include/curl/: Makefile
download/curl-7.74.0/lib/: curl_config.h  libcurl.la
download/curl-7.74.0/lib/.deps/: curl-curl_ctype.Po  curl-curl_multibyte.Po  curl-dynbuf.Po  curl-nonblock.Po  curl-strtoofft.Po  curl-version_win32.Po  curl-warnless.Po  libcurl_la-altsvc.Plo  libcurl_la-amigaos.Plo  libcurl_la-asyn-ares.Plo  libcurl_la-asyn-thread.Plo  libcurl_la-base64.Plo  libcurl_la-conncache.Plo  libcurl_la-connect.Plo  libcurl_la-content_encoding.Plo  libcurl_la-cookie.Plo  libcurl_la-curl_addrinfo.Plo  libcurl_la-curl_ctype.Plo  libcurl_la-curl_des.Plo  libcurl_la-curl_endian.Plo  libcurl_la-curl_fnmatch.Plo  libcurl_la-curl_get_line.Plo  libcurl_la-curl_gethostname.Plo  libcurl_la-curl_gssapi.Plo  libcurl_la-curl_memrchr.Plo  libcurl_la-curl_multibyte.Plo  libcurl_la-curl_ntlm_core.Plo  libcurl_la-curl_ntlm_wb.Plo  libcurl_la-curl_path.Plo  libcurl_la-curl_range.Plo  libcurl_la-curl_rtmp.Plo  libcurl_la-curl_sasl.Plo  libcurl_la-curl_sspi.Plo  libcurl_la-curl_threads.Plo  libcurl_la-dict.Plo  libcurl_la-doh.Plo  libcurl_la-dotdot.Plo  libcurl_la-dynbuf.Plo  libcurl_la-easy.Plo  libcurl_la-easygetopt.Plo  (+84 more)
download/curl-7.74.0/lib/.libs/: libcurl.lai
download/curl-7.74.0/lib/vauth/.deps/: libcurl_la-cleartext.Plo  libcurl_la-cram.Plo  libcurl_la-digest.Plo  libcurl_la-digest_sspi.Plo  libcurl_la-krb5_gssapi.Plo  libcurl_la-krb5_sspi.Plo  libcurl_la-ntlm.Plo  libcurl_la-ntlm_sspi.Plo  libcurl_la-oauth2.Plo  libcurl_la-spnego_gssapi.Plo  libcurl_la-spnego_sspi.Plo  libcurl_la-vauth.Plo
download/curl-7.74.0/lib/vquic/.deps/: libcurl_la-ngtcp2.Plo  libcurl_la-quiche.Plo  libcurl_la-vquic.Plo
download/curl-7.74.0/lib/vssh/.deps/: libcurl_la-libssh.Plo  libcurl_la-libssh2.Plo  libcurl_la-wolfssh.Plo
download/curl-7.74.0/lib/vtls/.deps/: libcurl_la-bearssl.Plo  libcurl_la-gskit.Plo  libcurl_la-gtls.Plo  libcurl_la-keylog.Plo  libcurl_la-mbedtls.Plo  libcurl_la-mbedtls_threadlock.Plo  libcurl_la-mesalink.Plo  libcurl_la-nss.Plo  libcurl_la-openssl.Plo  libcurl_la-schannel.Plo  libcurl_la-schannel_verify.Plo  libcurl_la-sectransp.Plo  libcurl_la-vtls.Plo  libcurl_la-wolfssl.Plo
download/curl-7.74.0/scripts/: Makefile
download/curl-7.74.0/src/: Makefile  curl
download/curl-7.74.0/src/.deps/: curl-slist_wc.Po  curl-tool_binmode.Po  curl-tool_bname.Po  curl-tool_cb_dbg.Po  curl-tool_cb_hdr.Po  curl-tool_cb_prg.Po  curl-tool_cb_rea.Po  curl-tool_cb_see.Po  curl-tool_cb_wrt.Po  curl-tool_cfgable.Po  curl-tool_convert.Po  curl-tool_dirhie.Po  curl-tool_doswin.Po  curl-tool_easysrc.Po  curl-tool_filetime.Po  curl-tool_formparse.Po  curl-tool_getparam.Po  curl-tool_getpass.Po  curl-tool_help.Po  curl-tool_helpers.Po  curl-tool_homedir.Po  curl-tool_hugehelp.Po  curl-tool_libinfo.Po  curl-tool_main.Po  curl-tool_metalink.Po  curl-tool_msgs.Po  curl-tool_operate.Po  curl-tool_operhlp.Po  curl-tool_panykey.Po  curl-tool_paramhlp.Po  curl-tool_parsecfg.Po  curl-tool_progress.Po  curl-tool_setopt.Po  curl-tool_sleep.Po  curl-tool_strdup.Po  curl-tool_urlglob.Po  curl-tool_util.Po  curl-tool_vms.Po  curl-tool_writeout.Po  curl-tool_writeout_json.Po  (+1 more)
download/curl-7.74.0/tests/: Makefile  configurehelp.pm
download/curl-7.74.0/tests/certs/: Makefile
download/curl-7.74.0/tests/certs/scripts/: Makefile
download/curl-7.74.0/tests/data/: Makefile
download/curl-7.74.0/tests/server/: Makefile
download/curl-7.74.0/tests/unit/: Makefile
feature/arm_toolchain/: environment-setup-cortexa7hf-neon-poky-linux-gnueabi
feature/log/: CMakeLists.txt
feature/log/inc/: easylogging.h
feature/log/src/: easylogging.cpp
include/: normal_typedef.h
product/inc/: datacollecter.h  datacollecter.h.pre  functionlist.h  functionlist.h.pre  protocol_cmm.h  protocol_cmm.h.pre
product/src/: datacollecter.cpp  datacollecter.cpp.pre
protocol/MitCncTest/MitTest/: .main.cpp.swp  MitTest.pro  main.cpp
protocol/MitCncTest/MitTest/libezsocket/: build.bat  ezsocket.c  ezsocket.h  ezsocket_data.c  ezsocket_new.c  ezsocket_new.h  ezsocket_private.c  ezsocket_private.h  ezsocket_tcp_private.c  ezsocket_tcp_private.h  libezsocket.lib  siemencnc_host.cpp  siemencnc_host.h
protocol/MitCncTest/MitTest/libezsocket/doc/: libezsocket说明文档.md
protocol/MitCncTest/MitTest/mitsubishicnc_host/: mitsubishicnc_host.cpp  mitsubishicnc_host.h  三菱CNC应用层协议封装文档.md
protocol/SimensCnc/Simens/: .CMakeLists.txt.swp  CMakeLists.txt  Simens.pro  main.cpp
protocol/SimensCnc/Simens/libsiemenscnc/: CMakeLists.txt
protocol/SimensCnc/Simens/libsiemenscnc/828d/: siemens_828d_new.c  siemens_828d_new.h
protocol/SimensCnc/Simens/libsiemenscnc/doc/: libsiemenscnc说明文档.md
protocol/SimensCnc/Simens/libsiemenscnc/inc/: siemenscnc.h  siemenscnc_private.h  siemenscnc_tcp_private.h
protocol/SimensCnc/Simens/libsiemenscnc/src/: siemenscnc.c  siemenscnc.c.pre  siemenscnc_data.c  siemenscnc_private.c  siemenscnc_tcp_private.c
protocol/SimensCnc/Simens/siemenscnc_host/: siemenscnc_host.cpp  siemenscnc_host.cpp.pre  siemenscnc_host.h  西门子CNC应用层协议介绍.md
